# solana_logistics_trace

./: .env.example  .gitignore  README.md
backend/: .env.example  Cargo.toml  README.md
backend/migrations/: 20260108120000_etapa1_catalogs.sql  20260108120001_etapa1_domain_tables.sql  20260320120000_cat_products.sql  20260320130000_cat_locations.sql  20260322120000_incidents_telemetry.sql  20260322120001_shipment_monitoring.sql  20260518120000_reconcile_delivered_shipment_status.sql  20260518120000_shipment_lost_catalog.sql  20260518130000_incident_severity_matrix.sql  20260519120000_shipment_carrier_wallet.sql  20260524120000_reconcile_lost_shipment_status.sql
backend/src/: config.rs  cors.rs  db.rs  lib.rs  main.rs  tests.rs  wallet_query.rs
backend/src/access/: mod.rs
backend/src/domain/: mod.rs  shipment_status.rs
backend/src/dto/: metadata.rs  mod.rs  shipment_api.rs  shipment_details.rs
backend/src/handlers/: actors.rs  catalogs.rs  health.rs  incidents.rs  mod.rs  public_shipments.rs  shipments.rs  solana.rs
backend/src/handlers/sync/: actor.rs  assign_carrier.rs  checkpoint.rs  incident.rs  mod.rs  shipment.rs
backend/src/incident_engine/: mod.rs  models.rs  severity.rs
backend/src/incident_engine/jobs/: mod.rs
backend/src/repos/: actors.rs  catalogs.rs  checkpoints.rs  mod.rs  products.rs  shipments.rs
backend/src/services/: mod.rs  shipment_status_transition.rs
backend/src/solana/: borsh_accounts.rs  decode.rs  decode_instructions.rs  discriminators.rs  mod.rs  rpc_http.rs
backend/test-ledger/: faucet-keypair.json
frontend/: README.md  (+5 more)
(+195 files in other folders)
