[package]
name = "logistics_trace_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
rocket = { version = "0.5.1", features = ["json", "uuid"] }
rocket_cors = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
borsh = "1.5"
borsh-derive = "1.5"
bs58 = "0.5"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
] }
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "uuid",
    "chrono",
    "json",
] }
uuid = { version = "1", features = ["serde", "v4"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
rand = "0.8"

[dev-dependencies]
serde_json = "1"
serial_test = "3"
wiremock = "0.6"
